After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 585376 - Uninitialized variable
Uninitialized variable
Status: RESOLVED FIXED
Product: brasero
Classification: Applications
Component: general
unspecified
Other Linux
: Normal normal
: 2.26
Assigned To: Brasero maintainer(s)
Brasero maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2009-06-10 18:55 UTC by Vincent Untz
Modified: 2009-06-17 01:03 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Patch (543 bytes, patch)
2009-06-10 18:55 UTC, Vincent Untz
committed Details | Review

Description Vincent Untz 2009-06-10 18:55:07 UTC
See the patch, this is happening because of a commented line.
Comment 1 Vincent Untz 2009-06-10 18:55:35 UTC
Created attachment 136296 [details] [review]
Patch
Comment 2 Vincent Untz 2009-06-17 01:03:57 UTC
Luis told me to commit.