Fix uninitialized variable

http://bugzilla.gnome.org/show_bug.cgi?id=585376